1999-03-31  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* configure.in: update version to 0.2 for next release.

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: added support for 'See Also' section.

	* gtk-doc.dsl.in: changed green background color slightly, and
	set background color for enum tables.

1999-03-21  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkhtml.in (gtkdocdir): use '-w no-idref' to suppress all the
	warnings about references to non-existent IDs.

1999-03-18  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-mkdb.in (OutputParamDescriptions): use role="params" for the
	table so we can adjust the stylesheet code.
	(OutputSGMLFile): Don't output 'one line description goes here'.
	(ExpandAbbreviations): allow '-' in #symbol abbreviations, so we can
	use #GtkWidget-struct.
	(MakeXRef): get rid of special '-struct' suffix, for #GtkWidget-struct.

	* gtk-doc.dsl.in: use the "role" attribute on tables to set the
	BGCOLOR.

	* gtkdoc-scan.in (ScanHeader): fix for scanning functions declared
	over multiple lines - was catching things which weren't functions.

1999-03-11  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* examples/gnomeui/Makefile.am (clean-local): 
	* examples/gnome/Makefile.am (clean-local): added *.args

	* gtkdoc-mkdb.in: added support for Args and variables. Also a few
	minor changes in the output, e.g. don't show macros > 2 lines long.

	* gtkdoc-mktmpl.in: 
	* gtkdoc-scanobj.in: added support for Args.

	* gtkdoc-scan.in: added support for extern'ed variables. Also
	accept 'extern' before function declarations.

	* gtk-doc.dsl.in: made output prettier. Changed the navigation bars
	and the colours used for the various backgrounds.

	* doc/style-guide.txt: new file containinf a style guide for writing
	the GTK+ documentation.

	* doc/README: added description of style-guide.txt

	* doc/setting-up.txt: fixed a typo

	* README: added a bit about Args.

1999-02-07  Damon Chaplin  <damon@karuna.freeserve.co.uk>
