@@ -18,7 +18,7 @@ DocBook DTD v3.0 - This is the DocBook SGML DTD.
 Jade v1.1 - This is a DSSSL processor for converting SGML to various formats.
     http://www.jclark.com/jade
 
-Modular DocBook Stylesheets (I've got 1.33, but v1.15+ should be OK)
+Modular DocBook Stylesheets (I've got 1.40, but v1.19+ may be OK)
     This is the DSSSL code to convert DocBook to HTML (and a few other
     formats). It's used together with jade.
     I've customized the DSSSL code slightly, in gtk-doc.dsl, to colour
